tests/integration/error/match_non_enum.alo
// expect-error: Match expression must be an enum

fun main() -> void {
  match 1 {
    _ => {
      println("bad");
    }
  }
}
